--- a/packages/docs/src/.vuepress/styles/index.scss
+++ b/packages/docs/src/.vuepress/styles/index.scss
@@ -1,3 +1,10 @@
+details {
+  margin-top: 20px;
+
+  summary {
+    margin-bottom: 12px;
+  }
+}
 /**
 * example-block
 */
@@ -149,6 +156,6 @@
   color: #fff;
   border-radius: 6px;
   cursor: pointer;
-  display: block;
+  display: inline-block;
   margin-right: 20px;
 }
