--- a/packages/docs/src/.vuepress/styles/index.scss
+++ b/packages/docs/src/.vuepress/styles/index.scss
@@ -106,6 +106,27 @@ details {
   flex: 1 1 0;
 }
 
+.vfm-flex {
+  display: flex;
+  align-items: center;
+}
+
+.vfm-flex-item {
+  width: 200px;
+  margin-right: 50px;
+  flex: 0 0 auto;
+}
+
+.vfm-flex-item-box {
+  display: flex;
+  align-items: center;
+}
+
+.vfm-flex-item-ins {
+  width: 0;
+  flex: 1 1 auto;
+}
+
 .vfm-input {
   width: 100%;
   height: 26px;
@@ -159,4 +180,8 @@ details {
   cursor: pointer;
   display: inline-block;
   margin-right: 20px;
+  
+  &.red {
+    background: red;
+  }
 }
